deployment1-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-application
spec:
  selector:
    matchLabels:
      project: mate
  template:
    metadata:
      labels:
        project: mate
    spec:
      containers:
        - name: mate-web
          image: matemaaan/k8sphp:latest
          ports:
            - containerPort: 80
