deployment3-autoscalling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app: my-k8s-application
    env: prod
    owner: Dmitriy
spec:
  replicas: 2
  selector:
    matchLabels:
      project: matemaaan
  template:
    metadata:
      labels:
        project: matemaaan
    spec:
      containers:
        - name: matemaaan-web
          image: matemaaan/k8sphp:latest
          ports:
            - containerPort: 80
