service2-multi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-multi-pod
  labels:
    app: my-k8s-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      project: mate-multi
  template:
    metadata:
      labels:
        project:
          mate-multi
    spec:
      containers:
        - name: my-web
          image: matemaaan/k8sphp:latest
          ports:
            - containerPort: 80 #port on Pod

        - name: not-my-web
          image: tomcat:latest
          ports:
            - containerPort: 8080 #port on Pod
---
apiVersion: v1
kind: Service
metadata:
  name: my-multi-pods-service
  labels:
    env: prod
    owner: DmitriyShirokov
spec:
  type: LoadBalancer
  selector:
    project: mate-multi
  ports:
    - name: my-web-app-listener
      protocol: TCP
      port: 80
      targetPort: 80

    - name: not-my-web-app-listener
      protocol: TCP
      port: 8888
      targetPort: 8080
