service3-loadbalancer-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app: my-k8-deployment
spec:
  selector:
    matchLabels:
      project: mates
  template:
    metadata:
      labels:
        project: mates
    spec:
      containers:
        - name: mate-web
          image: matemaaan/k8sphp:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels:
    env: prod
    owner: DmitriyShirokov
spec:
  selector:
    project: mates
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
