ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
    - host: www.mateman.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: main
                port:
                  number: 80
    - host: web1.mateman.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web1
                port:
                  number: 80
    - host: web2.mateman.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web2
                port:
                  number: 80
    - host: cat.mateman.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tomcat
                port:
                  number: 8080
